Fixed outline always visible for eye and fullscreen

--- a/styles/options/checkboxes.css
+++ b/styles/options/checkboxes.css
@@ -1,7 +1,5 @@
 /*Checkbox*/
 #options input[type='checkbox'] {
   position: relative;
-  outline: 2px solid red;
-  border-radius: 0.5ch;
   cursor: url('../../assets/icons/cursor/click.svg') 8 8, pointer;
 }
